cursor pointer fixes for collapsable container

--- a/vtr-ui/src/app/components/ui/ui-lighting-profile/ui-lighting-profile.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-lighting-profile/ui-lighting-profile.component.scss
@@ -109,6 +109,7 @@
               background: $gaming_shade;
               margin-bottom: 5rem;
               .dropdown-toggle {
+                cursor: pointer;
                 padding-left: 2rem;
                 padding-right: 2rem;
                 line-height: 4.8rem;
